api created and documented
